--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="expense-form">
-  <%= simple_form_for expense do |form| %>
+  <%= simple_form_for expense, url: group_expenses_path(group) do |form| %>
     <% if expense.errors.any? %>
       <div style="color: red">
         <h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
