--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,9 +1,9 @@
 <h1>New expense</h1>
 
-<%= render "form", expense: @expense %>
+<%= render "form", group: @expense_group, expense: @expense %>
 
 <br>
 
 <div>
-  <%= link_to "Back to expenses", expenses_path %>
+  <%= link_to "Back", group_path(@expense_group) %>
 </div>
