--- a/app/views/expense_groups/show.html.erb
+++ b/app/views/expense_groups/show.html.erb
@@ -7,14 +7,14 @@
     <h1 class="page-title"><%= @expense_group.description %></h1>
     <div class="flex gap-2 items-center">
       <%= link_to "All", group_index_path, class: "link text-sm" %>
-      <%= link_to "+ Add expense", new_group_expense_path(@expense_group), class: "link" %>
+      <%= link_to "Add new expense", new_group_expense_path(@expense_group), class: "link" %>
     </div>
   </div>
 
   <div class="box flex justify-end items-center gap-1">
-    <%= link_to "Edit", edit_group_path(@expense_group), class: "link  text-sm" %>
-    <%= link_to "Settle", "#", class: "link text-sm inline-block" %>
-    <%= button_to "Delete", group_path(@expense_group), method: :delete, class: "link text-sm inline-block" %>
+    <%= link_to "edit", edit_group_path(@expense_group), class: "link  text-sm" %>
+    <%= link_to "settle", "#", class: "link text-sm inline-block" %>
+    <%= button_to "delete", group_path(@expense_group), method: :delete, data: { turbo_confirm: "Are you sure want to delete this expense group?" }, class: "link text-sm inline-block" %>
   </div>
 
   <div class="box">
