--- a/app/views/expenses/_list.html.erb
+++ b/app/views/expenses/_list.html.erb
@@ -2,7 +2,14 @@
   <% expenses.each do |expense| %>
     <li>
       <div class="flex justify-between">
-        <span><%= link_to expense.description, group_expense_path(@expense_group, expense), class: "link" %></span><span class="subtext"><%= number_to_currency(expense.amount, precision: 2, unit: "Rs. ") %></span>
+        <div>
+          <span><%= expense.description %></span>
+          <span class="subtext"><%= number_to_currency(expense.amount, precision: 2, unit: "Rs. ") %></span>
+        </div>
+        <div class="flex gap-2">
+          <%= link_to "edit", edit_group_expense_path(@expense_group, expense), class: "link" %>
+          <%= button_to "delete", group_expense_path(@expense_group, expense), class: "link", method: :delete, data: { turbo_confirm: "Are you sure want to delete this expense ?" } %>
+        </div>
       </div>
     </li>
   <% end %>
