--- a/app/views/expense_groups/_form.html.erb
+++ b/app/views/expense_groups/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= simple_form_for(expense_group, url: group_index_path, method: :post) do |f| %>
+<%= simple_form_for(expense_group, url: submit_url, method: http_method) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
@@ -8,7 +8,8 @@
   </div>
 
   <div class="box flex gap-2 items-center">
-    <%= f.button :submit, "Create group",class: "btn btn-primary"  %>
+    <% button_text = expense_group.new_record? ? "Create group" : "Update group" %>
+    <%= f.button :submit, button_text,class: "btn btn-primary"  %>
     <%= link_to "Cancel", cancel_link, class: "link" %>
   </div>
 <% end %>
