--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="expense-form">
-  <%= simple_form_for expense, url: group_expenses_path(group) do |form| %>
+  <%= simple_form_for expense, url: submit_url, method: http_method do |form| %>
     <% if expense.errors.any? %>
       <div style="color: red">
         <h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
@@ -38,7 +38,9 @@
     </div>
 
     <div class="box">
-      <%= form.button :submit, "Create expense", class: "btn btn-primary"  %>
+      <% button_text = expense.new_record? ? "Create expense" : "Update expense" %>
+      <%= form.button :submit, button_text, class: "btn btn-primary"  %>
+      <%= link_to "Cancel", cancel_link, class: "link" %>
     </div>
   <% end %>
 </div>
