--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,10 +1,6 @@
-<h1>Editing expense</h1>
-
-<%= render "form", expense: @expense %>
-
-<br>
-
-<div>
-  <%= link_to "Show this expense", @expense %> |
-  <%= link_to "Back to expenses", expenses_path %>
+<div class="box">
+  <h1 class="page-title">Editing expense</h1>
 </div>
+
+
+<%= render "form", expense: @expense, submit_url: group_expense_path(@expense_group, @expense), http_method: :patch, cancel_link: group_path(@expense_group) %>
