--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -31,6 +31,10 @@
         @apply px-3.5 py-2.5 rounded-md focus:ring-0 w-full;
     }
 
+    .input-text-inline {
+        @apply w-fit font-semibold text-2xl tracking-tight text-gray-500;
+    }
+
     .input-check {
         @apply rounded focus:ring-0;
     }
