--- a/app/views/expense_groups/show.html.erb
+++ b/app/views/expense_groups/show.html.erb
@@ -3,8 +3,9 @@
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
 
-  <div class="flex justify-between items-center box">
-    <h1 class="page-title"><%= @expense_group.description %></h1>
+  <div class="flex justify-between items-center box" data-controller="inline-edit">
+    <%= render "shared/inline_edit", resource: @expense_group, url: group_path(@expense_group), field_name: "description" %>
+    <h1 class="page-title" data-inline-edit-target="groupTitle" data-action="dblclick->inline-edit#doubleClick"><span><%= @expense_group.description %></span></h1>
     <div class="flex gap-2 items-center">
       <%= link_to "All", group_index_path, class: "link text-sm" %>
       <%= link_to "Add new expense", new_group_expense_path(@expense_group), class: "link" %>
@@ -18,9 +19,20 @@
   </div>
 
   <div class="box">
-    <div>You owe xxx</div> <div>You have to get xxx from others</div>
-    <div>You owe to xxx </div>
-    <div>PP owe to you</div>
+    <p>Debtors</p>
+    <ul>
+    <% @expense_group.summary[:debt].each do |name, amount| %>
+      <li class="flex gap-4"><div><%= name %></div><div>owe</div><div>Rs. <%= amount %></div></li>
+    <% end %>
+    </ul>
+  </div>
+
+  <div class="box">
+    <p>Payers</p>
+    <% @expense_group.summary[:payer].each do |name, amount| %>
+      <li class="flex gap-4"><div><%= name %></div><div>has to get</div><div>Rs. <%= amount %></div></li>
+    <% end %>
+    </ul>
   </div>
 
   <div class="box">
