--- a/app/views/expense_groups/show.html.erb
+++ b/app/views/expense_groups/show.html.erb
@@ -20,7 +20,7 @@
   <div class="box">
     <p class="page-subtitle">Debtors</p>
     <ul>
-    <% @expense_group.summary[:debt].each do |name, amount| %>
+    <% @summary[:debt].each do |name, amount| %>
       <li><span><%= name %></span>&nbsp;<span>owe</span>&nbsp;<span class="subtext"><%= number_to_currency(amount, precision: 2, unit: "Rs. ") %></span></li>
     <% end %>
     </ul>
@@ -29,7 +29,7 @@
   <div class="box">
     <p class="page-subtitle">Payers</p>
     <ul>
-    <% @expense_group.summary[:payer].each do |name, amount| %>
+    <% @summary[:payer].each do |name, amount| %>
       <li><span><%= name %></span>&nbsp;<span>has to get</span>&nbsp;<span class="subtext"><%= number_to_currency(amount, precision: 2, unit: "Rs. ") %></span></li>
     <% end %>
     </ul>
